--- a/src/LDA.ipynb
+++ b/src/LDA.ipynb
@@ -488,7 +488,25 @@
       "INFO:mini_batch_lda:Iteration: 135\n",
       "INFO:mini_batch_lda:Ro: 0.0196412386841\n",
       "INFO:mini_batch_lda:Iteration: 136\n",
-      "INFO:mini_batch_lda:Ro: 0.0195264613563\n"
+      "INFO:mini_batch_lda:Ro: 0.0195264613563\n",
+      "INFO:mini_batch_lda:Iteration: 137\n",
+      "INFO:mini_batch_lda:Ro: 0.0194131822135\n",
+      "INFO:mini_batch_lda:Iteration: 138\n",
+      "INFO:mini_batch_lda:Ro: 0.0193013710544\n",
+      "INFO:mini_batch_lda:Iteration: 139\n",
+      "INFO:mini_batch_lda:Ro: 0.0191909984985\n",
+      "INFO:mini_batch_lda:Iteration: 140\n",
+      "INFO:mini_batch_lda:Ro: 0.0190820359572\n",
+      "INFO:mini_batch_lda:Iteration: 141\n",
+      "INFO:mini_batch_lda:Ro: 0.0189744556078\n",
+      "INFO:mini_batch_lda:Iteration: 142\n",
+      "INFO:mini_batch_lda:Ro: 0.0188682303675\n",
+      "INFO:mini_batch_lda:Iteration: 143\n",
+      "INFO:mini_batch_lda:Ro: 0.0187633338683\n",
+      "INFO:mini_batch_lda:Iteration: 144\n",
+      "INFO:mini_batch_lda:Ro: 0.0186597404342\n",
+      "INFO:mini_batch_lda:Iteration: 145\n",
+      "INFO:mini_batch_lda:Ro: 0.0185574250577\n"
      ]
     }
    ],
